- router 설정 - 불필요한 파일 삭제

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "DrinkMe",
+  "name": "DrinkMe",
   "icons": [
     {
       "src": "favicon.ico",
