--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^1.0.2"
+    "redux-saga": "^1.0.2",
+    "sass-loader": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
