--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "classnames": "^2.2.6",
         "node-sass": "^4.11.0",
         "react": "^16.8.4",
+        "react-color": "^2.17.0",
         "react-dom": "^16.8.4",
         "react-redux": "^6.0.1",
         "react-router-dom": "^4.3.1",
