--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "react": "^16.8.4",
         "react-color": "^2.17.0",
         "react-dom": "^16.8.4",
+        "react-dropzone": "^10.1.4",
         "react-redux": "^6.0.1",
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.8",
