--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@egjs/react-infinitegrid": "^1.5.1",
         "axios": "^0.18.0",
         "classnames": "^2.2.6",
         "node-sass": "^4.11.0",
