--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "react-router-dom": "^4.3.1",
         "react-scripts": "2.1.8",
         "react-select": "^2.4.2",
+        "react-spinners-kit": "^1.9.0",
         "redux": "^4.0.1",
         "redux-logger": "^3.0.6",
         "redux-saga": "^1.0.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "styled-components": "^4.2.0"
     },
     "scripts": {
         "start": "react-scripts start",
