--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@egjs/react-infinitegrid": "^1.5.1",
         "axios": "^0.18.0",
         "classnames": "^2.2.6",
+        "lodash": "^4.17.11",
         "node-sass": "^4.11.0",
         "react": "^16.8.4",
         "react-color": "^2.17.0",
